# Digital-Twin-in-python

./: .gitignore  .pre-commit-config.yaml  ALL_PHASES_COMPLETE.md  CHANGELOG.md  CITATIONS.md  CI_FIXED.md  CI_FIXES_NEEDED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  GETTING_STARTED.md  LICENSE  Makefile  NOTICE  NOTICE_v1_to_v2.md  PHASE_0_REPORT.md  PHASE_1_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  PROJECT_STATUS.txt  README.md  README_v2.md  RELEASE_CHECKLIST.md  SECURITY.md  STATUS.md  V2_ACTIVATION_SUMMARY.md  digitalTwin_Li_ION.ipynb  index.html  pyproject.toml  pyproject_v1_backup.toml  pyproject_v2.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
assets/: otwin-icon.ai
benchmarks/: run_benchmarks.py
benchmarks/results/: benchmark_summary.json  simple_forecasting.json  water_tank.json  water_tank_metadata.json
config/: default.yaml
docs/: Makefile  README-IMAGES-GUIDE.md  claude_code_brief_addendum.md  conf.py  index.rst  quickstart.rst
docs/images/: .gitkeep
examples/battery_soh/: README.md  results.csv  run_battery_soh.py  soh_fleet.csv
examples/battery_soh/figure_data/: 00_fleet_overview.csv  01_hero_forecast_test.csv  02_method_comparison.csv  03_calibration.csv  04_pit_histogram.csv  05_horizon.csv  06_rul_hero_crossings.csv  07_rul_parity.csv  09_skill.csv
examples/battery_soh/matlab/: plot_all.m
examples/battery_soh/slides/: battery_soh_overview.pptx  build_deck.js  make_science_assets.py
examples/dc_motor/: README.md  run_dc_motor.py
examples/dc_motor/figure_data/: dc_motor_steady_state.csv  dc_motor_timeseries.csv
examples/grid_storage_dispatch/: README.md  prepare_opsd.py  run_dispatch.py
examples/grid_storage_dispatch/figure_data/: 01_arbitrage_trajectories.csv  02_peak_trajectories.csv  03_arbitrage_montecarlo.csv  04_peak_montecarlo.csv  05_calibration_arbitrage.csv  05_calibration_peak.csv
examples/pumped_hydro/: README.md  run_pumped_hydro.py
examples/pumped_hydro/figure_data/: pumped_hydro_timeseries.csv  pumped_hydro_validation.csv
examples/water_tank_phs/: README.md  water_tank_demo.py
legacy_v1/: .gitignore_v2  README.md
legacy_v1/hybrid_digital_twin/: __init__.py
legacy_v1/hybrid_digital_twin/core/: __init__.py
legacy_v1/hybrid_digital_twin/data/: __init__.py
legacy_v1/hybrid_digital_twin/models/: physics_model.py
legacy_v1/hybrid_digital_twin/utils/: __init__.py  exceptions.py  validators.py
legacy_v1/tests/: test_physics_model.py
notebooks/examples/: quick_start_tutorial.ipynb
src/PKG/: __init__.py
src/PKG/evaluation/: __init__.py  baselines.py  metrics.py  protocol.py  report.py  splitters.py
src/PKG/integrate/: __init__.py  solvers.py  structure_preserving.py
src/PKG/learn/: __init__.py  losses.py  phnn.py
src/PKG/systems/: __init__.py  iphs.py  library.py  phs.py
src/PKG/twin/: __init__.py  compose.py  twin.py
src/PKG/uq/: __init__.py  calibration.py  ensemble.py  gp_phs.py
src/PKG/utils/: __init__.py  linalg.py  seeding.py
src/hybrid_digital_twin/: __init__.py  cli.py
src/hybrid_digital_twin/core/: __init__.py  digital_twin.py
src/hybrid_digital_twin/data/: __init__.py  data_loader.py
src/hybrid_digital_twin/models/: __init__.py  ml_model.py  physics_model.py
src/hybrid_digital_twin/utils/: __init__.py  exceptions.py  metrics.py  validators.py
src/hybrid_digital_twin/visualization/: __init__.py  plotters.py
src/otwin/: __init__.py  py.typed
src/otwin/evaluation/: __init__.py  protocol.py
src/otwin/integrate/: __init__.py  solvers.py  structure_preserving.py
src/otwin/learn/: __init__.py  losses.py  phnn.py
src/otwin/systems/: __init__.py  iphs.py  library.py  phs.py
src/otwin/twin/: __init__.py  compose.py  twin.py
src/otwin/uq/: __init__.py  calibration.py  ensemble.py  gp_phs.py
src/otwin/utils/: __init__.py  linalg.py  seeding.py
tests/: __init__.py  conftest.py  test_integration.py  test_smoke.py
tests/evaluation/: test_guards.py  test_metrics.py  test_protocol.py
tests/integrate/: test_structure_preserving.py
tests/integration/: __init__.py  test_end_to_end.py
tests/learn/: test_phnn.py
tests/performance/: __init__.py  test_benchmarks.py
tests/systems/: test_iphs.py  test_iphs_enforcement.py  test_phs.py
tests/twin/: test_uq_wiring.py
tests/unit/: __init__.py  test_digital_twin.py  test_physics_model.py
tests/uq/: test_calibration.py  test_ensemble.py  test_gp_phs.py
tests/utils/: test_linalg.py
