[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otwin"
version = "2.0.0-alpha"
description = "Composable, physically-consistent (port-Hamiltonian) digital twins with calibrated uncertainty and rigorous evaluation by default — lightweight, CPU-first"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Javier Marin", email = "javier@jmarin.info"},
]
maintainers = [
    {name = "Javier Marin", email = "javier@jmarin.info"},
]
keywords = [
    "digital-twin",
    "port-hamiltonian",
    "physics-informed",
    "uncertainty-quantification",
    "forecasting",
    "structure-preserving",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]

# Core: numpy and scipy only
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
# Optional: PyTorch for learned PHS (CPU-only)
torch = [
    "torch>=2.0.0",
]
# Optional: GP backend for GP-PHS
gp = [
    "gpytorch>=1.9.0",
    "scikit-learn>=1.0.0",
]
# Optional: visualization
viz = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "seaborn>=0.12.0",
]
# Optional: everything needed to run the worked examples in examples/
examples = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "cvxpy>=1.3.0",
]
# Dev: testing, linting, typing, docs
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    # Linters/formatters/type-checker are pinned so CI enforcement is
    # deterministic (a newer black/ruff could reformat or flag differently).
    "mypy==2.1.0",
    "ruff==0.15.20",
    "black==26.5.1",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Javihaus/otwin"
Documentation = "https://github.com/Javihaus/otwin/docs"
Repository = "https://github.com/Javihaus/otwin.git"
Issues = "https://github.com/Javihaus/otwin/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | legacy_v1
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["legacy_v1"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# Math-heavy code: matrix/operator names (J, R, H, S, L, A, X, K, ...) are
# intentionally uppercase, so pep8-naming N802/N803/N806 are disabled. N999 is
# disabled because the package is deliberately named `otwin`. E501 (line length)
# is delegated to black, which leaves only unsplittable strings/comments.
ignore = ["E501", "N802", "N803", "N806", "N999"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "gpytorch.*",
    "sklearn.*",
    "plotly.*",
    "matplotlib.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/otwin"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "legacy_v1/*",
    # Optional-extra modules: covered by their own gated tests only when the
    # extra is installed ([torch], [gp]); excluded from the core coverage gate.
    "src/otwin/learn/phnn.py",
    "src/otwin/learn/losses.py",
    "src/otwin/uq/gp_phs.py",
    # Phase-6 stub (documented NotImplementedError, not yet implemented).
    "src/otwin/twin/compose.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
fail_under = 85
